--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:layout_margin="5dp">
+
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp">
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -114,3 +119,4 @@
         app:layout_constraintTop_toTopOf="@+id/url" />
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
